# sentiment_rollup

./: .env.sample  Cargo.toml  README.md
scripts/: build.sh
src/: database.rs  main.rs
