[package]
name = "sentiment_rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql"]}